gigmee-k8s/AWS/1-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gigme-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gigme-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: gigme-gateway
    spec:
      containers:
      - name: gigme-gateway
        image: ensp1re/gigme-gateway:stable
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "300m"
            memory: 300Mi
          requests:
            cpu: "100m"
            memory: 150Mi
        ports:
        - name: gateway
          containerPort: 4000
