gigmee-k8s/AWS/1-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gigme-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: gigme-gateway
  ports:
  - name: gateway
    port: 4000
    targetPort: 4000
    protocol: TCP
